--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "framer-motion": "^12.16.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
